[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/DriveLogic.gd" type="Script" id=1]
[ext_resource path="res://scripts/MyCar.gd" type="Script" id=2]
[ext_resource path="res://assets/rubbish/bag.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 98.1826, 48.4151 )

[node name="Driving" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="0"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Label" type="Label" parent="CanvasLayer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 8.0
margin_right = 66.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Time: 30"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Car" type="Node2D" parent="." index="1"]

position = Vector2( 900, 100 )
script = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="Car" index="0"]

texture = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Area2D" type="Area2D" parent="Car" index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Car/Area2D" index="0"]

shape = SubResource( 1 )

[node name="GameTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="SpawnTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[node name="EnemySpawnPoints" type="Node2D" parent="." index="4"]

[node name="Spawn1" type="Node2D" parent="EnemySpawnPoints" index="0"]

position = Vector2( -50, 150 )
_sections_unfolded = [ "Transform" ]

[node name="Spawn2" type="Node2D" parent="EnemySpawnPoints" index="1"]

position = Vector2( -50, 300 )
_sections_unfolded = [ "Transform" ]

[node name="Spawn3" type="Node2D" parent="EnemySpawnPoints" index="2"]

position = Vector2( -50, 450 )
_sections_unfolded = [ "Transform" ]

[node name="Instructions" type="Control" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 400.0
margin_top = 300.0
margin_right = 400.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="Instructions" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Label" type="Label" parent="Instructions/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 217.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Drive to work without crashing."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="Instructions/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 217.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Move the mouse to move the car."
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Instructions/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 217.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Let's Go!"
flat = false
align = 1

[node name="EnemyCars" type="Node2D" parent="." index="6"]

[connection signal="area_entered" from="Car/Area2D" to="Car" method="_on_Area2D_area_entered"]

[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[connection signal="pressed" from="Instructions/VBoxContainer/Button" to="." method="_on_Button_pressed"]


